styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  @font-face {
    font-family: "Söhne web";
    src: url("https://cdn.jonheslop.com/fonts/soehne-web-buch.eot");
    src: url("https://cdn.jonheslop.com/fonts/soehne-web-buch.eot#iefix")
        format("embedded-opentype"),
      url("https://cdn.jonheslop.com/fonts/soehne-web-buch.woff2")
        format("woff2"),
      url("https://cdn.jonheslop.com/fonts/soehne-web-buch.woff") format("woff");
    font-weight: normal;
    font-style: normal;
    font-display: swap;
  }

  body {
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
  }

  .post-content h1,
  .post-content h2 {
    @apply text-gray-500;
  }

  .post-content * + h1,
  .post-content * + h2 {
    @apply mt-16;
  }

  .post-content h1,
  .post-content h2 {
    @apply text-xl md:text-lg lg:text-xl mb-4;
  }

  .post-content p + p {
    @apply mt-8;
  }

  .post-content p,
  .post-content li {
    @apply max-w-xl leading-normal text-xl md:text-lg lg:text-xl;
  }

  .post-content a:link,
  .post-content a:visited {
    @apply underline hover:text-green-600;
  }

  .post-content p code {
    @apply text-base  py-1  px-2  bg-gray-50 text-green-700;
  }

  .post-content pre {
    @apply my-8 p-4 bg-gray-900 text-gray-50 overflow-auto;
  }

  .post-content ul {
    @apply my-8 list-disc;
  }

  .post-content li + li {
    @apply mt-3;
  }

  .post-content blockquote {
    @apply pl-4 border-l-4 border-gray-200 mb-8;
  }
  
  .hljs {
    @apply leading-tight text-xs;
  }

  .hljs,
  .hljs-tag,
  .hljs-subst {
    @apply text-gray-50;
  }

  .hljs-strong,
  .hljs-emphasis {
    @apply text-gray-200;
  }

  .hljs-bullet,
  .hljs-quote,
  .hljs-number,
  .hljs-regexp,
  .hljs-literal,
  .hljs-link {
    @apply text-purple-400;
  }

  .hljs-code,
  .hljs-title,
  .hljs-section,
  .hljs-selector-class {
    @apply text-green-400;
  }

  .hljs-strong {
    font-weight: bold;
  }

  .hljs-emphasis {
    font-style: italic;
  }

  .hljs-keyword,
  .hljs-selector-tag,
  .hljs-name,
  .hljs-attr {
    @apply text-pink-400;
  }

  .hljs-symbol,
  .hljs-attribute {
    @apply text-blue-400;
  }

  .hljs-params,
  .hljs-class .hljs-title {
    @apply text-gray-100;
  }

  .hljs-string,
  .hljs-type,
  .hljs-built_in,
  .hljs-builtin-name,
  .hljs-selector-id,
  .hljs-selector-attr,
  .hljs-selector-pseudo,
  .hljs-addition,
  .hljs-variable,
  .hljs-template-variable {
    @apply text-yellow-400;
  }

  .hljs-comment,
  .hljs-deletion,
  .hljs-meta {
    @apply text-gray-400;
  }
}

